# techpark_dz2

./: CMakeLists.txt  Dockerfile  Examples  Makefile  README.md  TESTFILE.txt  main.c  report.txt  structures.h
.github/workflows/: ci.yml
input_processing/: CMakeLists.txt  input_processing.c  input_processing.h
linters/: run_shared.sh  run_static.sh
shared_lib/: CMakeLists.txt  generate_report.c  generate_report.h  input_processing.c  input_processing.h  structures.h
static_lib/: CMakeLists.txt  generate_report.c  generate_report.h  generate_report_static.c  generate_report_static.h  input_processing.c  input_processing.h  structures.h
tests_shared/: CMakeLists.txt  test_shared.cpp
tests_static/: CMakeLists.txt
