cmake_minimum_required(VERSION 3.0.0)
project(input_processing)

file(GLOB SOURCES *.c)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} ${SOURCES})

set(INPUT_PROCESSING_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(INPUT_PROCESSING_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)